fix tab text will not wrap when tab shrink

--- a/page/ui/panel/tab.css
+++ b/page/ui/panel/tab.css
@@ -42,6 +42,8 @@
 .title {
     margin: 3px 8px;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #icon {
